# ai-research-arm

./: .dockerignore  .env.example  .gitattributes  .gitignore  0001-Methodology-improvements-for-2026-04-28.patch  0001-Methodology-improvements-for-2026-04-29.patch  0001-Methodology-improvements-for-2026-04-30-workflow-pat.patch  AGENTS.md  ARA_CATALOG.json  ARA_DSL.md  CLAUDE.md  COMPONENTS.md  Caddyfile  Dockerfile  IMPROVEMENT-PATCH-2026-05-01.patch  IMPROVEMENT-PATCH-2026-05-02.patch  IMPROVEMENT-PATCH-2026-05-04.patch  IMPROVEMENTS.md  IMPROVEMENTS_LOG.md  LICENSE  NEWSPAPER_DSL.md  PROPOSED_WORKFLOW_CHANGES.patch  README.md  TWITTER_COMPONENTS.md  improve-2026-05-13-workflow-fixes.patch  improve-2026-05-14-workflow-fixes.patch  improve-2026-05-16-workflow-fixes.patch  improve-2026-05-17-workflow-fixes.patch  improvements-2026-05-12-workflows.patch  index.html  pyproject.toml  requirements-optional.txt  requirements.txt
.Jules/: palette.md
.claude/: settings.json  settings.local.json
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
dashboard/: .gitignore  index.html  package-lock.json  package.json  vercel.json  vite.config.js
data/: agent-backends.json
docs/: ai-industry-map.md  ara-generative-ui.md  backend-matrix.md  blog-subscriptions.md  generative-research-backends.md  headline-dedupe.md  hooker-telemetry.md  model-tickets.md  okf.md  since-the-open-sourcing-post.md  twitter-account-curation.md  twitter-model-ab.md  wiki-schema.md
improvements/: 2026-05-07-workflow-fixes.patch  2026-05-08-workflow-fixes.patch  2026-05-09-workflow-fixes.patch  (+1 more)
(+4326 files in other folders)
