[project]
name = "ai-research-arm"
version = "0.1.0"
description = "Automated multi-source AI news research pipeline and dashboard data generator."
requires-python = ">=3.10"
dependencies = [
    "pyyaml==6.0.3",
]

[project.optional-dependencies]
stock = [
    "yfinance==1.4.0",
]

[tool.uv]
package = false
